과제 홈페이지 만들기

--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <title>Web Programming</title>
 
     <script src="https://cdn.tailwindcss.com"></script>
-    <link rel="stylesheet" href="./css/style.css"/>
+    <link rel="stylesheet" href="css/style.css"/>
 
     <script src="https://cdn.jsdelivr.net/npm/htmx.org@1.9.5/dist/htmx.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/htmx.org@1.9.5/dist/ext/client-side-templates.js"></script>
@@ -16,7 +16,7 @@
     <script src="https://cdn.jsdelivr.net/npm/chart.js@3.9.1/dist/chart.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/moment@2.29.4/moment.min.js"></script>
 
-    <script src="./js/chart.js"></script>
+    <script src="js/chart.js"></script>
     <title>Web Programming</title>
 </head>
 
