웹 프로그래밍 과제 final

--- a/public/index.html
+++ b/public/index.html
@@ -68,12 +68,12 @@
                     <li class="mt-2 ml-5">HTML</li>
                     <li class="mt-2 ml-5">CSS</li>
                     <li class="mt-2 ml-5">JavaScript</li>
-                    <li class="mt-2 ml-5">GitHub Page 배포</li>
+                    <li class="mt-2 ml-5">AWS EC2를 사용하여 배포</li>
                 </ul>
             </div>
             <div class="mt-5">
                 <i class="fa-solid fa-circle-exclamation"></i>
-                문동민
+                내 노트북을 중심으로 페이지를 만들어 일반 데스크톱에서는 똑바로 보이지 않을 수 있음!!!
             </div>
         </div>
 
